# data-analysis

./: .dockerfile  .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
data/: categories_dummy_211.csv  favorite_products_dummy_3000_updated.csv  group_boards_dummy_366_title_change.csv  group_products_dummy_366.csv  participants_dummy_2312.csv  products_dummy_860.csv  users_dummy_200.csv
eda/: EDA_카테고리별_인기_분석.ipynb  리더 활동 통계 분석.ipynb  공구 플랫폼 거래상태 및 운영 인사이트 분석.ipynb  공구마감률추이분석.ipynb  리더활동통계분석.ipynb  전체분석취합.ipynb  지역분석.ipynb  카테고리별 인기 분석(한글).ipynb
streamlit/: README.md  app.py
