[project]
name = "data-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "graphviz>=0.20.3",
    "matplotlib>=3.10.3",
    "nbformat>=4.2.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pingouin>=0.5.5",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "statsmodels>=0.14.4",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
